--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -276,7 +276,8 @@ Jeder Marktplatz strukturiert Artikeldaten anders. Deshalb treten beim Zuordnen 
 |====
 | Marktplatz-Datenfeld | plentymarkets Datenfeld
 
-| *Kategoriegruppenbezogene Attribute*
+| Kategoriegruppen- +
+bezogene Attribute
 | Aktuelle Informationen zu den OTTO Market-Attributen findest du in der Kategorienliste von OTTO Market link:https://og2gether-my.sharepoint.com/:x:/g/personal/micha_saake_otto_de/EXg5Id8bTxNKuV8mRkQ1wrsBNFuBrjP8iQJINZjcezvjdg?rtime=3FovyUEf2Ug[in der Registerkarte "Attributsliste"^]
 
 | *Lieferzeit in Tagen* +
@@ -405,7 +406,7 @@ Unabhängig davon, ob die MOIN bereits existiert oder OTTO Market eine neue MOIN
 
 * Bestand mehrerer Lager exportieren:
   . Ordne das plentymarkets Datenfeld *Bestand » [Lager wählen]* zu.
-  . Klicke auf *Ausweich-Datenfeld hinzufügen* (icon:link[role="yellow"]) und ordne über das plentymarkets Datenfeld *Bestand » [Lager wählen]* ein weiteres Lager zu. Du kannst mehrere Ausweich-Datenfelder angeben. +
+  . Klicke auf *Ausweich-Datenfeld hinzufügen* (icon:link[role="black"]) und ordne über das plentymarkets Datenfeld *Bestand » [Lager wählen]* ein weiteres Lager zu. Du kannst auch mehrere Ausweich-Datenfelder angeben. +
   → Der Bestand aller Lager wird addiert, die als Datenfelder und Ausweich-Datenfelder hinzugefügt wurden.
 
 * Summe der Nettobestände aller Vertriebslager exportieren:
@@ -421,7 +422,71 @@ Unabhängig davon, ob die MOIN bereits existiert oder OTTO Market eine neue MOIN
 | *Verkaufspreiswährung*; +
 *UVP-Währung*; +
 *Angebotspreiswährung*
-| OTTO Market kann nur die Währung EURO verarbeiten. Deshalb werden diese Datenfelder automatisch mit dem Wert „EUR“ befüllt.
+| OTTO Market kann nur die Währung EURO verarbeiten. Deshalb werden diese Datenfelder automatisch mit dem Wert "EUR" befüllt.
+
+| Grundpreisangaben
+| OTTO berechnet den Grundpreis von Varianten über die folgenden Marktplatz-Datenfelder:
+
+* *Verkaufspreismenge*
+* *Verkaufspreiseinheit*
+* *Grundpreismenge*
+* *Grundpreiseinheit*
+
+
+*_Wichtig:_* Um den Grundpreis einer Variante an OTTO zu übermitteln, müssen an der Variante Informationen zum Inhalt und der Einheit gespeichert sein. Diese Angaben speicherst du im Menü *Artikel » Artikel bearbeiten » [Variante öffnen] » Tab: Einstellungen » Bereich: Maße » Einstellung: Inhalt*.
+
+Die Einstellung *Inhalt* setzt sich aus *Inhalt Menge* und *Inhalt Einheit* zusammen:
+
+include::images$otto-unitprice-variation-setting.png[]
+
+Für die Grundpreisberechnung empfehlen wir die folgenden Zuordnungen:
+
+[cols="1,3a,3a"]
+!===
+! *OTTO Market-Datenfeld*
+! *Zuordnung in plentymarkets*
+! *Erläuterung*
+
+! Verkaufspreismenge
+! * *Variante » Inhalt Menge*
+! Die Verkaufspreismenge entspricht der Menge des Inhalts der Variante. Dazu benötigst du also den Inhalt der Variante in deinen Maßangaben.
+
+! Grundpreismenge
+! * Eigenschaft mit den von OTTO erlaubten Werten (`1`, `100` und/oder `1000`)
+! Die Grundpreismenge ist die Grundlage zum Berechnen des Grundpreises. OTTO erlaubt die Werte *1*, *100* oder *1000*. Ordne dieses Feld einer Eigenschaft mit den Werten *1*, *100* und/oder *1000* zu. +
+*_Tipp:_* Wenn alle Varianten des Katalogs eine Grundpreismenge von *1* haben, kannst du das Feld *Grundpreismenge* unzugeordnet lassen. Wir übergeben dann den Standardwert *1*.
+
+! Grundpreiseinheit
+! * *Variante » Inhalt Einheit » [ISO-Code der Einheit eingeben]* +
+include::images$otto-unitprice-mappings.png[] +
+*_Tipp:_* Die ISO-Codes findest du im Menü *Einrichtung » Artikel » Einheiten* in der Spalte *ISO*. +
+*_Beispiel:_* Für die Angabe *Stück* wird der Wert "C62" erwartet. +
+include::images$otto-unitprice-iso.png[]
+
+_oder_
+
+* Eigenschaft mit den von OTTO Market erlaubten Werten (ISO-Codes) +
+include::images$otto-unitprice-mappings-salesprice.png[] +
+Die ISO-Codes findest du im Menü *Einrichtung » Artikel » Einheiten* in der Spalte *ISO*. +
+*_Beispiel:_* Für die Angabe *Stück* wird der Wert "C62" erwartet. +
+include::images$otto-unitprice-iso.png[]
+! Die Grundpreiseinheit bezieht sich auf den Inhalt der Einheit der Maßangaben der Variante. OTTO Market erwartet den ISO-Code der Einheit.
+
+*_Tipp:_* An der Variante speicherst du nicht den ISO-Code. Stattdessen wählst du für die Einstellung *Inhalt* eine Einheit aus der Dropdown-Liste:
+
+include::images$otto-unitprice-content.png[]
+
+! Verkaufspreiseinheit
+! * *Variante » Inhalt Einheit » [ISO-Code der Einheit eingeben]* +
+*_Tipp:_* Die ISO-Codes findest du im Menü *Einrichtung » Artikel » Einheiten* in der Spalte *ISO*. +
+*_Beispiel:_* Für die Angabe *Stück* wird der Wert "C62" erwartet.
+
+_oder_
+
+* Eigenschaft mit den von OTTO erlaubten Werten (ISO-Codes)
+! Die Verkaufspreiseinheit entspricht der Einheit der Varianteneinstellung *Inhalt*. OTTO Market erwartet den ISO-Code der Einheit.
+!===
+
 |====
 
 [#altgerätemitnahme]
