--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -422,16 +422,13 @@ Unabhängig davon, ob die MOIN bereits existiert oder OTTO Market eine neue MOIN
 | *Verkaufspreiswährung*; +
 *UVP-Währung*; +
 *Angebotspreiswährung*
-| OTTO Market kann nur die Währung EURO verarbeiten. Deshalb werden diese Datenfelder automatisch mit dem Wert "EUR" befüllt.
+| OTTO Market kann nur die Währung EURO verarbeiten. Deshalb werden diese Marktplatz-Datenfelder automatisch mit dem Wert "EUR" befüllt.
 
-| Grundpreisangaben
-| OTTO berechnet den Grundpreis von Varianten über die folgenden Marktplatz-Datenfelder:
-
-* *Verkaufspreismenge*
-* *Verkaufspreiseinheit*
-* *Grundpreismenge*
-* *Grundpreiseinheit*
-
+| *Verkaufspreismenge*; +
+*Verkaufspreiseinheit*; +
+*Grundpreismenge*; +
+*Grundpreiseinheit*
+| Über diese Marktplatz-Datenfelder berechnet OTTO den Grundpreis von Varianten.
 
 *_Wichtig:_* Um den Grundpreis einer Variante an OTTO zu übermitteln, müssen an der Variante Informationen zum Inhalt und der Einheit gespeichert sein. Diese Angaben speicherst du im Menü *Artikel » Artikel bearbeiten » [Variante öffnen] » Tab: Einstellungen » Bereich: Maße » Einstellung: Inhalt*.
 
@@ -441,9 +438,9 @@ image::maerkte:otto-unitprice-variation-setting.png[]
 
 Für die Grundpreisberechnung empfehlen wir die folgenden Zuordnungen:
 
-[cols="2,3a"]
+[cols="2,4a"]
 !===
-! *OTTO Market-Datenfeld*
+! *OTTO Market- Datenfeld*
 ! *Zuordnung in plentymarkets*/ *Erläuterung*
 
 ! Verkaufspreismenge
