--- a/docs/en-gb/modules/markets/partials/amz-setup-menu.adoc
+++ b/docs/en-gb/modules/markets/partials/amz-setup-menu.adoc
@@ -202,7 +202,8 @@ Items with the setting *Limited to net stock* are not taken into consideration.
 
 | *Activate long lead time*
 | Select *Yes* to increase the maximum processing time of Amazon orders from 30 up to 120 days. +
-*_Note:_* You can only activate this setting after it was unlocked for you on Amazon.
+*_Note:_* You can only activate this setting after it was unlocked for you on Amazon. +
+*No* is transferred by default.
 
 | *Manufacturer part number*
 | Select whether you want to transfer the SKU, variation number, GTIN, variation ID, external variation ID, model or no value at all for the CSV file’s field.
