--- a/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
@@ -152,6 +152,76 @@ Der Benutzername ist eine E-Mail-Adresse.
 |Gib das Passwort deines Prohandel-Kontos ein.
 |====
 
+[#43]
+=== Standorte im Lager berücksichtigen
+
+In diesem Schritt entscheidest du, ob plentymarkets den genauen Standort jedes Artikels im Lager erfassen soll.
+
+*_Hintergrund-Wissen_*:
+
+* Mit plentymarkets kannst du nicht nur den Bestand eines Artikels nachverfolgen, sondern auch, wo sich der Artikel im Lager befindet.
+** In plentymarkets wird der Standort des Artikels als "Lagerort" bezeichnet.
+** In Prohandel wird der Standort des Artikels als "Shop" bezeichnet.
+
+[[table-storage-location-function]]
+.Standorte im Lager berücksichtigen
+[cols="1,3a"]
+|====
+|Einstellung |Erläuterung
+
+| *Standorte berücksichtigen*
+|Soll plentymarkets den genauen Standort jedes Artikels im Lager erfassen?
+
+icon:toggle-on[role="blue"] = Der genaue Lagerort des Artikels wird erfasst.
+Wenn sich der Lagerbestand ändert, d.h. wenn ein Artikel ein- oder ausgebucht wird, dann wird der spezifische Lagerort berücksichtigt.
+Hast du diese Funktion aktiviert, dann musst du auch die Einstellungen in Schritt *Zuordnung der Standorte* vornehmen.
+
+icon:toggle-off[role="darkGrey"] = Der Lagerort des Artikels wird nicht erfasst.
+In plentymarkets wird der Lagerort immer als "Standard" angegeben.
+
+|====
+
+[#46]
+=== Zuordnung der Standorte
+
+In diesem Schritt ordnest du deine Prohandel-Shops deinen plentymarkets Lagerorten zu.
+Die Lagerorte in plentymarkets werden dabei automatisch generiert.
+
+*_Beispiel_*:
+
+* Über den Artikelimport erhält plentymarkets die Information, dass ein Artikel im Prohandel-Shop 1234 liegt.
+* Daraus erstellt das Plugin automatisch einen passenden plentymarkets-Lagerort im Menü *Einrichtung » Waren » Lager » [Lager öffnen] » Lagerorte* und verknüpft ihn in diesem Schritt des Assistenten.
+
+[[table-storage-location-mapping]]
+.Zuordnung der Standorte
+[cols="1,3a"]
+|====
+|Einstellung |Erläuterung
+
+| *Prohandel-Filiale*
+|Dies sind die bestandsführenden Filialen in Prohandel.
+Wähle die passende Filiale aus der Dropdown-Liste aus.
+
+| *Prohandel-Shop*
+|Dies sind die Shop-Namen in Prohandel.
+Wähle den passenden Shop aus der Dropdown-Liste aus.
+
+| *plentymarkets-Lagerort*
+|Dies sind die Lagerort-IDs im plentymarkets-Menü *Einrichtung » Waren » Lager » [Lager öffnen] » Lagerorte*.
+
+|====
+
+[TIP]
+.Logik der Namensgebung
+====
+Deine automatisch generierten Lagerorte findest du im Menü *Einrichtung » Waren » Lager » [Lager öffnen] » Lagerorte*.
+Der Name des Lagerorts folgt immer einer bestimmten Logik.
+Die Lagerorte heißen: `Prohandel level:Prohandel SL for shop 1234`.
+Dabei steht `1234` für die Prohandel-Shopnummer.
+Diese Benennung kann man nicht anpassen.
+Sie ist fest vorgegeben.
+====
+
 [#50]
 === Zuordnung der Bestandsfilialen
 
