--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -478,6 +478,7 @@ Im Bearbeitungsmodus unter *Einstellungen » Filter-Einstellungen* werden dir di
 |====
 |Einstellung |Erläuterung
 
+// TODO: prüfen
 |*Verfügbare Filter*
 |In der linken Spalte werden alle verfügbaren Filter angezeigt. +
 Hinweis: Die Filter werden in die Gruppen *Nummern und IDs*, *Daten* und *Andere* gruppiert.
@@ -531,6 +532,8 @@ Filter speichern:
 *_Tipp:_* Wenn dir Filter fehlen, kannst du sie über die oben beschriebenen Schritte ergänzen.
 
 
+[#aktuellen-filter-speichern]
+// TODO: kopiert aus Versandcenter, anpassen
 
 [#gespeicherte-filter-anwenden]
 === Gespeicherte Filter anwenden
@@ -542,22 +545,6 @@ Gespeicherte Filter anwenden:
 . Klicke auf einen bereits erstellten Filter. +
 → Die Suche wird ausgeführt und die verwendeten Filtereinstellungen werden oben als Chips dargestellt.
 
-
-[#aktuellen-filter-speichern]
-// TODO: kopiert aus Versandcenter, anpassen
-
-=== Aktuellen Filter speichern
-…
-
-[.instruction]
-Aktuellen Filter speichern:
-…
-. Entscheide, ob
-** dieser <<#filter-als-standard, Filter als Standard>> festgelegt werden soll (icon:toggle-on[role="blue"])
-** dieser Filter für alle Benutzer:innen erstellt werden soll (icon:toggle-on[role="blue"]).
-. Klicke auf *SPEICHERN*. +
-
-|====
 
 // TODO: prüfen [#order-overview-single-actions]
 == Aufträge in der Übersicht bearbeiten
@@ -761,5 +748,508 @@ Mehrere Aufträge über die Gruppenfunktion bearbeiten:
 → Der Auftrag bleibt aber in der Liste sichtbar.
 
 
-== Auftragstypen
-=== Gutschrift
+
+
+= Auftragstypen
+
+== Retoure
+
+[#xx]
+=== Auftragstyp Retoure nutzen
+
+Der Auftragstyp Retoure bildet den Geschäftsvorfall einer Retoure ab. Retouren können manuell erfasst werden. Zusätzlich kannst du auch deinen Webshop-Kund:innen erlauben, Retouren über den *Mein Konto* Bereich anzumelden. Das Erfassen einer Retoure bucht die retournierten Artikel noch nicht zurück in den Warenbestand. Du erfasst also zunächst die retournierten Artikel und entscheidest anschließend, ob die Artikel wieder zum Bestand gebucht werden oder ob weitere Schritte, wie z.B. eine Reparatur, notwendig sind. Die Retoure ist ein untergeordneter Auftragstyp, da Retouren entweder einem Auftrag oder einer Gewährleistung zugeordnet sind.
+Bevor du Retouren erfassen kannst, lege xref:auftraege:auftraege-verwalten.adoc#410[Retourengründe] und xref:auftraege:auftraege-verwalten.adoc#420[Artikelstatus für retournierte Artikel] an.
+
+Der Standardstatus für Retouren ist Status 9. Jede Retoure, die erfasst wird, erhält automatisch diesen Status. Du kannst jedoch jederzeit im Menü *Einrichtung » Aufträge » Einstellungen* einen anderen Status als xref:auftraege:grundeinstellungen.adoc#intable-default-status-return[Standard-Status Retoure] festlegen.
+
+[#xx]
+=== Retourengründe eintragen
+
+Du kannst bis zu 20 Retourengründe eintragen. Beim Erfassen einer Retoure wählst du dann für jede Auftragsposition einen Grund. Anhand von Retourengründen ist später nachvollziehbar, ob ein Artikel besonders häufig wegen desselben Grundes retourniert wurde. Die Retourengründe können in mehreren Sprachen hinterlegt werden.
+
+[.instruction]
+Retourengründe anlegen:
+
+. Öffne das Menü *Einrichtung » Aufträge » Auftragstypen » Retoure*.
+. Wähle die *Sprache* aus der Dropdown-Liste aus.
+. Trage *Gründe* für Retouren für die ausgewählte Sprache ein. +
+Hinweis: Pro Artikelposition kann ein Grund definiert werden.
+. *Speichere* die Einstellungen.
+. Wiederhole dies ggf. für weitere Sprachen.
+
+
+[#420]
+=== Status für retournierte Artikel eintragen
+
+Du kannst bis zu 12 Artikelstatus anlegen. Die Status kannst du z.B. nutzen, um einerseits den Zustand der retournierten Artikel, aber auch um den Fortschritt beim Bearbeiten der retournierten Artikel anzugeben. Die Status stehen in einer Retoure im Tab *Übersicht* bei den Auftragspositionen zur Wahl. Um je nach Fortschritt der Bearbeitung verschiedene Status zuzuweisen, lege die benötigten Status an. Du kannst Retourenstatus in mehreren Sprachen hinterlegen.
+
+[.instruction]
+Status für retournierte Artikel eintragen:
+
+. Öffne das Menü *Einrichtung » Aufträge » Auftragstypen » Retoure*.
+. Wähle die *Sprache* aus der Dropdown-Liste aus.
+. Trage die gewünschten *Status* für die Zuordnung zurückgesendeter Artikel für die ausgewählte Sprache ein. +
+Hinweis: Pro Artikelposition kann ein eigener Status definiert werden.
+. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. Wiederhole dies ggf. für weitere Sprachen.
+
+
+[#xx]
+=== Retoure erfassen und bearbeiten
+
+Eine Retoure erfasst du manuell, wenn ein Paket bei dir eingegangen ist oder du erlaubst deinen registrierten Webshop-Kund:innen, direkt im Kundenkonto des Shops Retouren anzumelden. Nachdem eine Retoure erfasst wurde, werden weitere Bearbeitungsmöglichkeiten sichtbar. So kannst du z.B. den Artikelstatus der retournierten Artikel erst nach dem Erfassen angeben.
+////
+Hinweis: Die Retourengründe (dropdown grün) werden durch die übergeordneten Retourengründe (gelb) überschrieben.
+////
+
+==== Retoure erfassen
+
+[.instruction]
+Gehe folgendermaßen vor, um eine Retoure zu erfassen:
+
+. Öffne das Menü *Aufträge » Aufträge [Testphase]*.
+→ Die Auftragsübersicht öffnet sich.
+. Suche (icon:search[role="blue"]) anhand der Filtereinstellungen den Auftrag, für den eine Retoure erzeugt werden soll.
+. Öffne den Auftrag oder die Gewährleistung, für den oder die eine Retoure angelegt werden soll.
+. Klicke auf (Warenkorb) *Aufträge erstellen*, um auf die Auswahl zu gelangen. Wähle *Retoure*, um eine Retoure anzulegen.
+. Wähle entweder die Option *aus einzelnen Positionen* oder *aus allen Positionen*.  +
+→ Ein Bearbeitungsfenster wird geöffnet.
+. Nimm die Einstellungen anhand <<table-settings-return>> vor.
+. *Speichere* (icon:save[role="green"]) die Einstellungen. +
+→ Die Retoure wird angelegt und in einem eigenen Fenster geöffnet.
+////
+include::partial$tabelle-aus-optionen-anlegen.adoc[]
+////
+
+[[table-settings-return]]
+.Optionen beim Erfassen einer Retoure
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+2+^| *Einstellungen*
+
+| *Status*
+|Einen Status für die Retoure aus der Dropdown-Liste wählen. Voreingestellt ist der Standardstatus, der im Menü *Einrichtung » Aufträge » Einstellungen* gespeichert wurde.
+
+| *Eigner*
+|Einen Eigner aus der Dropdown-Liste wählen, der dem Retourenauftrag zugewiesen wird.
+
+| *Retourengrund*
+|Einen Grund für die Retoure aus der Dropdown-Liste wählen.
+
+| *Paketcode der Retoure*
+|Paketcode der Retoure eintragen.
+
+
+2+^| *Artikel*
+
+| *Artikel-ID*
+|Die Artikel-ID wird angezeigt.
+
+| *Varianten-ID*
+|Die Varianten-ID wird angezeigt.
+
+| *Variantennummer*
+|Die Variantennummer wird angezeigt.
+
+| *Varianten-ID*
+|Die Varianten-ID wird angezeigt.
+
+| *Menge*
+|Die Menge wird als Zahl angezeigt.
+
+| *Verbleibende Menge*
+|Die Verbleibende Menge wird als Zahl angezeigt.
+
+| *Offene/Verfügbare Menge*
+|Die Offene/Verfügbare Menge wird als Zahl angezeigt.
+
+| *Name der Auftragsposition/Artikel-Name*
+|Der Name der Auftragsposition wird angezeigt.
+
+
+2. Tabelle
+| *Artikel-ID*
+|Die Artikel-ID wird angezeigt.
+
+| *Varianten-ID*
+|Die Varianten-ID wird angezeigt.
+
+| *Menge*
+|Die Verbleibende Menge wird angezeigt.
+
+| *Name der Auftragsposition/Artikel-Name*
+|Der Name der Auftragsposition wird angezeigt.
+
+| *Retourengrund*
+|Der zuvor ausgewählte Grund für die Retoure wird angezeigt.
+
+| *Artikel-Status/Auftrags-Status**
+|Der zuvor ausgewählte Status des Artikels wird angezeigt.
+
+| *Verbleibender Auftragswert in (%)*
+|Der verbleibende Wert des Auftrags wird angezeigt. Der Wert liegt zwischen 0 und 100.
+// TODO: prüfen
+
+| *Retourengrund übertragen*
+|Einen Grund für die Retoure wählen, der für alle Artikel der Retoure gilt. +
+Wenn hier ein Grund gewählt wird, hat dieser Grund Priorität gegenüber den einzeln wählbaren Gründen auf Artikelpositionsebene.
+
+| *Übernehmen*
+|Artikel wählen, die in die Retoure übernommen werden sollen.
+
+| *Menge*
+|Artikelmenge eintragen, die in die Retoure übernommen werden soll.
+
+| *Grund der Retoure*
+|Individuellen Grund für die Retoure eines Artikels wählen. +
+*_Hinweis_*: Wenn ein Grund für alle gewählt wurde, hat dieser Grund Priorität.
+
+| *Artikel*
+|Der Artikelname kann hier angepasst werden.
+
+Nachdem eine Retoure erfasst wurde, kannst du den Artikelstatus für retournierte Artikel wählen. Außerdem werden weitere Bearbeitungsmöglichkeiten sichtbar.
+
+
+[#xxx]
+=== Rücksendeschein erstellen
+
+Einen Rücksendeschein kannst du deinen Kund:innen bei Zustellung der Ware im Paket beilegen. In diesem Fall sollte der Rücksendeschein Blankofelder für die Retourengründe enthalten. Du kannst deinen Kund:innen aber auch erlauben den Rücksendeschein im *Mein Konto* Bereich auszufüllen, auszudrucken und der Retoure beizulegen.
+Bevor Rücksendescheine erzeugt werden können, muss die Dokumentenvorlage
+// TODO:prüfen
+xref:auftraege:ruecksendeschein-erzeugen.adoc#[Rücksendeschein] im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente » Rücksendeschein* eingerichtet werden.
+
+[TIP]
+.Retourengründe auf der Vorlage einstellen
+====
+Du kannst einen unausgefüllten Rücksendeschein in jedem Paket beilegen, dass du versendest. Hierfür generierst du den Rücksendeschein direkt im Auftrag, ohne dass es überhaupt eine Retoure geben muss. Die zweite Möglichkeit ist, dass du deinen Webshop-Kund:innen erlaubst Retouren im Mein-Konto-Bereich des Shops anzumelden und hier die Retourengründe anzugeben. Anschließend kann der Rücksendeschein ausgefüllt ausdruckt werden. Egal wie du den Rücksendeschein deinen Kund:innen zukommen lässt: Damit Retourengründe eingetragen werden können, musst du die Spalte Retourengründe unterhalb der Artikelpositionen platzieren.
+====
+
+Prüfe die Artikelpositionen der Retoure und ändere bei Bedarf die Optionen, z.B. die Menge eines Artikels, bevor du im Tab *Belege* der Retoure einen Rücksendeschein erzeugst.
+
+
+
+== Gutschrift
+
+= Gutschriften
+:keywords: Gutschrift, Gutschriften erzeugen, Gutschriftsbeleg, Gutschriftsdokument, Korrekturbeleg, Dokument, Auftragsdokument, Dokumentenvorlage, Dokumententyp, Dokumentvorlage, Dokumenttyp, …
+:author: team-order-core
+
+In plentymarkets kannst du Gutschriften als PDF-Dateien generieren, um diese z.B. zu drucken oder deinen Kund:innen als E-Mail Anhang zukommen zu lassen. +
+Gutschriften nutzt du beispielsweise, um bei bereits bezahlten Aufträgen nachträgliche Preisnachlässe zu gewähren oder wenn im Rahmen von Retouren Rückerstattungen veranlasst werden sollen.
+
+
+aus Handbuch
+[#xxx]
+== Auftragstyp Gutschrift nutzen
+
+Bei einer Gutschrift bekommen deine Kund:innen einen Betrag zurückerstattet. Dies kann beispielsweise nach einer xref:auftraege:auftraege-verwalten.adoc#400[Retoure] der Fall sein. Bei der Gutschrift in plentymarkets handelt es sich also nicht um eine Art umgekehrte Rechnung, sondern um eine Rückzahlung. Gutschriftaufträge erzeugst du unter *Aufträge » Aufträge bearbeiten* aus einem Auftrag. Eine Gutschrift ist also immer einem Auftrag zugeordnet. Die in einem Gutschriftauftrag erzeugten Gutschriftbelege werden auch in Buchhaltungsexporten, wie dem *DATEV*-Export, berücksichtigt.
+// TODO: xref prüfen
+
+[#xxx]
+=== Standardstatus für Gutschriften speichern
+
+Bevor du eine Gutschrift anlegst, prüfe den xref:auftraege:grundeinstellungen.adoc#intable-default-status-credit-note[Standard-Status für Gutschriften] im Menü *Einrichtung » Aufträge » Einstellungen*. Passe den Standardstatus bei Bedarf an und speichere die Einstellungen.
+
+[#xxx]
+=== Gutschrift anlegen
+
+Eine Gutschrift ist immer mit einem bestehenden Auftrag in deinem plentymarkets System verknüpft. Deshalb musst du den gewünschten Auftrag zunächst in der Auftragsübersicht öffnen, bevor du eine Gutschrift angelegen kannst.
+
+[TIP]
+.Gutschriften im Hauptauftrag oder im Retourenauftrag anlegen
+====
+Hat eine Kund:in den Auftrag bereits gezahlt, beispielsweise per Vorkasse, und entscheidet sich vor dem Warenausgang gegen den Kauf, empfehlen wir den Auftrag zu stornieren und direkt im Hauptauftrag eine Gutschrift über alle Auftragspositionen anzulegen.
+
+// TODO: xref prüfen
+Kommt es nach erfolgter Zahlung, Warenausgang und Zustellung der Ware für eine oder alle Auftragspositionen zu einer xref:auftraege:auftraege-verwalten.adoc#400[Retoure] oder im Folgenden zu einem xref:auftraege:auftraege-verwalten.adoc#700[Reparaturauftrag], lege die Gutschrift direkt im entsprechenden Retouren- oder Reparaturauftrag an.
+====
+
+:ordertype: Gutschriften
+
+[.instruction]
+Gutschriftauftrag anlegen:
+
+. Öffne das Menü *Aufträge » Aufträge [Testphase]*.
+→ Die Auftragsübersicht öffnet sich.
+. Suche (icon:search[role="blue"]) anhand der Filtereinstellungen den Auftrag, für den eine Gutschrift erzeugt werden soll.
+. Öffne den Auftrag, für den eine Gutschrift angelegt werden soll.
+. Klicke auf (Warenkorb) *Aufträge erstellen*, um auf die Auswahl zu gelangen. Wähle *Gutschrift*, um eine Gutschrift anzulegen.
+. Wähle entweder die Option *aus einzelnen Positionen* oder *aus allen Positionen*.  +
+→ Ein Bearbeitungsfenster wird geöffnet.
+. Nimm die Einstellungen anhand <<table-settings-return>> vor.
+. *Speichere* (icon:save[role="green"]) die Einstellungen. +
+→ Die Retoure wird angelegt und in einem eigenen Fenster geöffnet.
+
+include::partial$tabelle-aus-optionen-anlegen.adoc[]
+
+[#xxx]
+== Gutschrift aus einzelner Position erzeugen
+
+Einzelne Gutschriften kannst du manuell am jeweiligen Gutschriftauftrag erzeugen. Weitere Informationen und Anleitungen zum Anlegen von Gutschriftaufträgen findest du im Kapitel xref:auftraege:auftraege-verwalten.adoc#500[Gutschrift anlegen].
+// TODO: xref prüfen
+
+[.instruction]
+Gutschrift aus einzelnen Positionen erzeugen:
+
+. Öffne das Menü *Aufträge » Aufträge [Testphase]*. +
+→ Die Auftragsübersicht öffnet sich.
+. Suche (icon:search[role="blue"]) anhand der Filtereinstellungen den Auftrag, für den ein Dokument Gutschrift erzeugt werden soll.
+. Öffne den gewünschten Auftrag.
+. Klicke auf (icon:shopping_cart[set=material]) *Aufträge erstellen*. +
+. Wähle aus der Dropdown-Liste *Gutschrift* die Option *Gutschrift für einzelne Positionen* erstellen. +
+→ Die *Gutschrift* zum Auftrag wird erstellt und links in der Navigation als *Gutschrift* unter dem Auftrag angezeigt.
+. Klappe das Portlet *Historie* auf. Dort steht links das Erstellungsdatum, der Benutzer, als Aktion Neue Gutschrift und als Status 11 Gutschrift.
+In dem Portlet *Übersicht* siehst du den Auftragstyp jetzt als Gewährleistung. Links in der Navigation kann der *Auftragstyp* durch Klick auf x geschlossen werden.
+
+[#400]
+== Mehrere Gutschriften erzeugen
+////
+Sollen mehrere Gutschriften zugleich erzeugt werden, kannst du über einen Suchfilter im Menü *Aufträge » Fulfillment* festlegen, welche Aufträge berücksichtigt werden. Zudem kannst du in diesem Menü festlegen, ob der Status des Auftrags geändert werden soll, nachdem die Dokumente erzeugt wurden. Neu sollte das so gehen wie bei Retoure auch.
+////
+
+[.instruction]
+Mehrere Gutschriften erzeugen:
+////
+. Öffne das Menü *Aufträge » Aufträge [Testphase]* » usw*.
+. Nimm die Einstellungen anhand <<table-settings-fulfillment-credit-notes>> vor. +
+_Beachte_, dass die Einstellungen sowohl *Suchfilter* als auch *Aktionen* ?? umfassen.
+. Klicke auf das *Zahnrad* (icon:cog[]), um die Gutschriften zu erzeugen. +
+→ Es öffnet sich eine *PDF-Datei*, in der die zugehörigen Gutschriften aller von dir durch die Suchfilter bestimmten Aufträge enthalten sind.
+
+. Klicke auf das *Zahnrad* (<span class="material-icons">
+settings
+</span>
+, um die Gutschriften zu erzeugen. +
+
+Neu: kann ich noch nicht sehen im System
+Bei Retoure durch Haken in Auftragsübersicht auswählen
+////
+
+[[table-settings-return]]
+.Optionen beim Erfassen einer Gutschrift
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+2+^| *Einstellungen*
+
+| *Status*
+|Einen Status aus der Dropdown-Liste für die Gutschrift wählen. Voreingestellt ist der Standardstatus, der im Menü *Einrichtung » Aufträge » Einstellungen* gespeichert wurde.
+
+| *Eigner*
+|Einen Eigner aus der Dropdown-Liste wählen, der der Gutschrift zugewiesen wird.
+
+
+2+^| *Artikel*
+
+| *Artikel-ID*
+|Die Artikel-ID wird angezeigt.
+
+| *Varianten-ID*
+|Die Varianten-ID wird angezeigt.
+
+| *Menge*
+|Die Menge wird angezeigt. - editable with validation
+
+| *Verfügbare Menge*
+|Die Verfügbare Menge wird angezeigt.
+
+Symbol Warenkorb mit + Symbol - click to add item
+// TODO: Bezeichnungen anpassen
+Cart
+| *Artikel-ID*
+|Die Artikel-ID wird angezeigt.
+
+| *Varianten-ID*
+|Die Varianten-ID wird angezeigt.
+
+| *Menge*
+|Die Menge wird angezeigt. - editable with validation
+
+| *Name der Artikelposition*
+|Die Artikelposition ist editierbar.
+
+
+Wenn ein Gutschriftauftrag zu einem Auftrag angelegt wurde, wird im Tab *Übersicht* ?? des Haupfauftrags rechts der Hinweis *Gutschrift verfügbar* angezeigt. Zusätzlich kannst du bereits angelegte Gutschriftaufträge im Tab *Übersicht* des Hauptauftrags über die Dropdown-Liste *Gutschrift / suchen* aufrufen.
+Neu: wird links unter Auftrag angezeigt ….
+
+
+[#xxx]
+=== Gutschriftbeleg erstellen
+
+Nach dem Anlegen des Gutschriftauftrags muss ein Gutschriftbeleg direkt im Gutschriftauftrag erstellt werden. Vor dem ersten Erzeugen eines xref:auftraege:gutschriften-erzeugen.adoc#[Gutschriftbelegs] muss die Dokumentenvorlage im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente » Gutschrift* eingerichtet werden.
+
+Bevor du den Gutschriftbeleg im Tab *Belege* ?? des Gutschriftauftrags erzeugst, solltest du die im Gutschriftauftrag enthaltenen Auftragspositionen prüfen und bei Bedarf ändern.
+
+[.instruction]
+Gutschriftbeleg erstellen:
+
+. Öffne den Gutschriftauftrag, für den ein Gutschriftbeleg erzeugt werden soll.
+. Wähle die Option *Gutschrift* aus der Dropdown-Liste unter *Beleg / erstellen*.
+. Klicke auf *Beleg erstellen*. +
+→ Der Gutschriftbeleg wird erzeugt und in einem eigenen Tab geöffnet.
+
+Erstellte Gutschriften weisen jeweils eine Referenz zu der Rechnung des dazugehörigen Auftrages auf. Im Tab *Dokumente* eines Auftrags wird dies in der Benennung der Gutschrift angezeigt.
+
+
+== Gewährleistung
+
+[#600]
+== Auftragstyp Gewährleistung nutzen
+
+Gewährleistungen sind xref:auftraege:auftraege-verwalten.adoc#400[Retouren] relativ ähnlich, denn in beiden Fällen bekommst du Waren eines Auftrags im *Status 7* wieder zurückgesendet. Im Gegensatz zur Retoure erwarten Kund:innen bei einer Gewährleistung aber entweder eine neue Lieferung oder eine Rückerstattung des Rechnungsbetrags mittels einer xref:auftraege:auftraege-verwalten.adoc#500[Gutschrift].
+
+[TIP]
+.Garantie vs. Gewährleistung
+====
+Im Gegensatz zur freiwillig erklärten Garantie handelt es sich bei der Gewährleistung um die *gesetzliche Pflicht* der Händler:innen, Mängel am Artikel, die bereits bei Lieferung bestanden haben, für Käufer:innen kostenlos zu beseitigen. Käufer:innen können die Gewährleistung gerichtlich bis zu 2 Jahre bei beweglichen Artikeln oder 3 Jahre bei unbeweglichen Artikeln geltend machen. Ab 6 Monaten nach Erhalt der Ware müssen Käufer:innen jedoch beweisen, dass die Mängel bereits bei Erhalt der Ware vorhanden war.
+====
+
+Wenn ein Gewährleistungsfall vorliegt, entscheidest du als Händler:in, ob du Käufer:innen die Kosten erstattest, den Artikel reparierst oder den Artikel austauschst. Soll ein Umtausch durchgeführt werden, lege eine *Gewährleistung* an. Möchtest du das Geld erstatten, lege eine xref:auftraege:auftraege-verwalten.adoc#500[Gutschrift] im Tab *Übersicht* der Gewährleistung an. Ob du die *Versandkosten* in einer Gewährleistung übernimmst oder nicht, wählst du in den xref:auftraege:grundeinstellungen.adoc#intable-shipping-costs-in-warranty[Grundeinstellungen] im Menü *Einrichtung » Aufträge » Einstellungen*.
+
+[TIP]
+.Einstellungen einer Gewährleistung
+====
+Wenn du eine Gewährleistung aus einem Auftrag heraus erzeugst, wird automatisch das *Versandprofil* des Auftrags übernommen. Die Einstellungen sind jedoch in der Gewährleistung änderbar. Bei *Lieferaufträgen* wird ebenfalls automatisch das korrekte Lager eingestellt. Die *Zahlungsart* bei Gewährleistungen ist änderbar.
+====
+
+[#xxx]
+=== Gewährleistung anlegen
+
+Normalerweise legst du eine Gewährleistung in einem bestehenden Retourenauftrag an. Es ist jedoch auch möglich, diese direkt aus dem zugrunde liegenden Hauptauftrag heraus anzulegen.
+
+Wird die Ware nach Lieferung beanstandet und du entscheidest dich beispielsweise aus Kostengründen gegen die Rücksendung der Ware, lege die Gewährleistung direkt im Hauptauftrag an.
+
+Möchtest du dagegen erst den Eingang der Retoure abwarten und die Ware prüfen, lege zunächst einen Retourenauftrag an und erstelle im Rahmen der Abwicklung dort eine Gewährleistung.
+
+
+:ordertype: Gewährleistungen
+
+[.instruction]
+Eine Gewährleistung anlegen:
+
+. Öffne das Menü *Aufträge* und gehe in die Auftragssuche.
+→ Die Auftragsübersicht wird angezeigt.
+. Öffne den gewünschten Haupt- oder Retourenauftrag.
+. Suche (icon:search[role="blue"]) den Auftrag, zu dem du eine Gutschrift anlegen möchtest.
+. Öffne den Auftrag. +
+. Klicke auf auf das Warenkorb-Symbol *Aufträge erstellen* und wähle aus der Dropdown-Liste *Gewährleistung*.
+. Wähle entweder die Option aus einzelnen Positionen oder aus allen Positionen.
+Beachte dazu die Erläuterungen in <<tabelle-{ordertype}-anlegen>>.
+. *Speichere* (icon:save[role="green"]) die Einstellungen. +
+→ Die Gewährleistung wird angelegt und erscheint links in der Navigation unter der Retoure oder dem Hauptauftrag.
+
+Im Portlet *Historie* (unten) erscheinen siehst du die Informationen: Datum der Erstellung, Benutzer, die ausgeführte Aktion (hier: Neue Gewährleistung und darüber Warenbestandsautomatik) sowie der geänderte Status.
+
+[[table-settings-return]]
+.Optionen beim Erfassen einer Gewährleistung
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+2+^| *Einstellungen*
+
+| *Status*
+|Einen Status aus der Dropdown-Liste für die Gutschrift wählen. Voreingestellt ist der Standardstatus, der im Menü *Einrichtung » Aufträge » Einstellungen* gespeichert wurde.
+
+| *Eigner*
+|Einen Eigner aus der Dropdown-Liste wählen. Voreingestellt ist der aktuelle Benutzer.
+
+| *Versandkosten*
+|optional (nicht im 1. Schritt)
+
+| *Eigner*
+|optional (nicht im 1. Schritt)
+
+
+2+^| *Artikel*
+
+| *Artikel-ID*
+|Die Artikel-ID wird angezeigt.
+
+| *Varianten-ID*
+|Die Varianten-ID wird angezeigt.
+
+| *Menge*
+|Die Menge wird angezeigt. - editable with validation
+
+| *Verfügbare Menge*
+|Die Verfügbare Menge wird angezeigt.
+
+| *Name der Artikelposition*
+|Die Artikelposition wird angezeigt.
+
+Symbol Warenkorb mit + Symbol - click to add item ???
+
+Cart = grün aus Tabelle
+| *Artikel-ID*
+|Die Artikel-ID wird angezeigt.
+
+| *Varianten-ID*
+|Die Varianten-ID wird angezeigt.
+
+| *Menge*
+|Die Menge wird angezeigt. - editable with validation
+
+| *Name der Artikelposition*
+|Die Artikelposition ist editierbar. ??
+
+
+[#620]
+=== Gewährleistung bearbeiten
+
+Gewährleistungsaufträge werden links unter Auftragssuche angezeigt. Öffne eine Gewährleistung, um beispielsweise einen zusätzlichen *Preis* einzugeben, wenn du dem Käufer einen höherpreisigen Artikel als Ersatz liefern willst. Falls nötig, können hier auch die Mengen der in der Gewährleistung enthaltenen Auftragspositionen verändert werden. Um eine Gewährleistung zu bearbeiten, gehe wie im Folgenden beschrieben vor.
+
+[.instruction]
+Gewährleistung bearbeiten: - kann ich noch nicht sehen
+
+. Öffne das Menü *Aufträge » Aufträge [Testphase]*.
+. Gehe in die Auftragsübersicht.
+. Wähle über das Symbol *Filter* im Filter *Auftragstyp* die Option *Gewährleistung*.
+. Klicke auf *Suchen* (icon:search[role="blue"]). +
+→ Es werden nur Gewährleistungen aufgelistet.
+. Klicke in die Zeile der Gewährleistung, die du bearbeiten möchtest. +
+→ Die Gewährleistung wird geöffnet und der Artikel kann über das Tab *Bearbeiten* bearbeitet werden. Neu öffnen sich die Portlets und rechts im Portlet Übersicht ändert sich der Auftragstyp. - anpassen
+
+
+[#630]
+=== Gewährleistung abschließen
+
+Zum Abschließen einer Gewährleistung musst du, wenn für die Ersatzware ein Aufpreis berechnet wird, zunächst eine Rechnung in der Gewährleistung erzeugen. Falls du keine Ersatzware versendest, sondern dich mit der Käufer:in auf einen nachträglichen Preisnachlass auf die beanstandete Ware einigst, legst du eine Gutschrift im Hauptauftrag an.
+
+Um die Bearbeitung einer Gewährleistung durch einen Umtausch abzuschließen, gehe wie im Folgenden beschrieben vor.
+
+[.instruction]
+Gewährleistung durch Umtausch abschließen:
+
+. Öffne in der Gewährleistung das Tab *Belege*. ?? überarbeiten!
+. Wähle *Rechnung* aus der Dropdown-Liste *Beleg erstellen*. +
+→ Ein neues Bearbeitungsfenster öffnet sich. +
+. *Speichere* (icon:save[role="green"]) die Einstellungen. +
+→ Die Rechnung wird erzeugt und in einem eigenen Tab geöffnet.
+. Wechsle in das Tab *Einstellungen*.
+. Klicke in der Zeile *Warenausgang* auf das Symbol *Warenausgang buchen*. +
+→ Der Warenausgang wird gebucht und der *Status* wechselt automatisch zu *[7] Warenausgang gebucht*.
+. Wechsle in das Menü *Aufträge » Aufträge bearbeiten*.
+. Setze den Status der Gewährleistung manuell auf Status *[10] Gewährleistung*.
+. *Speichere* (icon:save[role="green"]) die Einstellungen.
+
+[TIP]
+.Zahlungseingang bei Gewährleistungen buchen
+====
+Grundsätzlich müssen Zahlungen zu Gewährleistungen nur dann gebucht werden, wenn mit Käufer:innen ein Aufpreis vereinbart wurde. In diesem Fall buchst du den Zahlungseingang nach erfolgter Zahlung im Tab *Zahlung* der Gewährleistung.
+====
+
+Um die Bearbeitung einer Gewährleistung durch eine Gutschrift an den Käufer abzuschließen, gehe wie im Folgenden beschrieben vor:
+
+[.instruction]
+Gewährleistung durch Gutschrift abschließen:
+
+. Öffne den Haupt- oder Retourenauftrag zur Gewährleistung, für die du eine Gutschrift anlegen möchtest.
+. Öffne das Tab *Übersicht*
+. Klicke auf die Dropdown-Liste *Gutschrift* und dort auf die Einstellung *anlegen*. +
+→ Der Gutschriftauftrag wird angelegt und in einem eigenen Tab geöffnet.
+
+Der weitere Bearbeitungsprozess läuft identisch mit dem regulären Anlegen einer Gutschrift und dem Erzeugen eines Gutschriftbelegs ab und wird im Kapitel xref:auftraege:auftraege-verwalten.adoc#500[Auftragstyp Gutschrift nutzen] detailliert beschrieben.
