--- a/docs/de-de/modules/crm/pages/crm.adoc
+++ b/docs/de-de/modules/crm/pages/crm.adoc
@@ -4,7 +4,7 @@
 :id: IWIIOPV
 :author: team-crm
 
-In diesem Themenbereich findest du alle Informationen zum xref:crm:kontakte-erstellen.adoc#[Erstellen] und xref:crm:kontakte-bearbeiten.adoc#[Bearbeiten] von Kontaktdatensätzen – von der Adresse über Aufträge bis hin zu Eigenschaften, Dokumenten u.v.m. +
+In diesem Themenbereich findest du alle Informationen zum xref:crm:kontakt-erstellen.adoc#[Erstellen] und xref:crm:kontakt-bearbeiten.adoc#[Bearbeiten] von Kontaktdatensätzen – von der Adresse über Aufträge bis hin zu Eigenschaften, Dokumenten u.v.m. +
 Erstelle xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklassen] und xref:crm:vorbereitende-einstellungen.adoc#typ-erstellen[Typen] und nutze das xref:crm:vorbereitende-einstellungen.adoc#rabattsystem-nutzen[Rabattsystem] in plentymarkets. Verwalte deine xref:crm:firmen.adoc#[Firmen] und verknüpfe Kontakte mit den Firmen.
 
 Über die xref:crm:schnellsuche.adoc#[Schnellsuche] kannst du alle Informationen eines Kontakts oder die Adressdaten einer Gastbestellung auf einen Blick aufrufen. In diesem Bereich kannst du außerdem DSGVO-gemäß alle Daten zu einem Kontakt oder einer Gastbestellung herunterladen und Datensätze anonymisieren.
@@ -26,7 +26,7 @@ Richte einen xref:crm:newsletter-versenden.adoc#[Newsletter]-Dienst in deinem Sy
 * xref:crm:vorbereitende-einstellungen.adoc#typ-erstellen[Typ erstellen]
 * xref:crm:kontakt-erstellen.adoc#[Kontakt erstellen]
 * xref:crm:kontakt-bearbeiten.adoc#[Kontakt bearbeiten]
-* crm:vorbereitende-einstellungen.adoc#rabattsystem-nutzen[Rabattsystem nutzen]
+* xref:crm:vorbereitende-einstellungen.adoc#rabattsystem-nutzen[Rabattsystem]
 * xref:crm:op-liste.adoc#[Offene Posten anzeigen]
 * xref:crm:firmen.adoc#[Firmen verwalten]
 ======
